2020/Virtual2_K8sWorkshop/src/deploy/ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - netcoreconf-v2.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: netcoreconf-v2.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webui
              servicePort: 80
